@@ -98,6 +98,11 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Enabled qsub filters to be access from a non-default location.i TRQ-1127
   b - Put the ability to write the resources_used data to the accounting logs. This was in 4.1.1 
       and 4.1.2 but failed to make it into 4.1.3. TRQ-1329
+  b - Moved record_job_as_exiting from req_jobobit to on_job_exit_task so the job has a 
+      chance to move through its exiting routines before the "cleanup stuck exiting jobs
+      thread" tries to remove them. This prevents a deadlock when on_job_exit and the 
+      cleanup thread try to run at the same time. I also changed the time comparision
+      in check_exiting_jobs to use like units for the time comparison. TRQ-1306
 
 
 4.1.2
